--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="box myphoto">
+                    <div class="box noshadow myphoto">
                     </div>
-                    <div class="box red" id="about1">
+                    <div class="box boxabout red" id="about1">
                         <div class="content-centered">
                             <h3>my<br>experience</h3>
                         </div>
                     </div>
-                    <div class="box blue" id="about2">
+                    <div class="box boxabout blue" id="about2">
                         <div class="content-centered">
                             <h3>my<br>education</h3>
                         </div>
@@ -179,12 +179,12 @@
                 <div class="bigbox noshadow lower">
                     <div class="box striped noshadow">
                     </div>
-                    <div class="box grey" id="about3">
+                    <div class="box boxabout grey" id="about3">
                         <div class="content-centered" >
                             <h3>my<br>passions</h3>
                         </div>
                     </div>
-                    <div class="box mustard" id="about4">
+                    <div class="box boxabout mustard" id="about4">
                         <div class="content-centered">
                             <h3>what am I<br>looking for?</h3>
                         </div>
