about pop up redesign - just tryin'

--- a/index.html
+++ b/index.html
@@ -193,12 +193,16 @@
                     </div>
                 </div>
                 
-                <div class="about-details red" id="about1-details">
-                     <button type="button" class="about-details-close" id="about1-close"><i class="fa fa-times bigicon"></i></button>
+                <div class="about-details" id="about1-details">
+                    <div class="content-centered">
+                        <div class="about-details-rect red">
+                            <button type="button" class="about-details-close" id="about1-close"><i class="fa fa-times bigicon"></i></button>
 
-                    <h3 class="about-details-header">experience</h3>
-                    <i class="about-details-icon fa fa-suitcase bigicon"></i>
-                    <p>I've worked for a while as a <b>social media specialist</b> and <b>copywriter</b> in advertising agency where I realized that I'm less write more code kind of girl. Currently I'm working as a <b>freelance web developer</b> and <b>digital consultant</b>. I am also experienced in events organization, cheese production, picking Swedish berries and manufacturing perfumes - but I guess it isn't relevant here ;)</p>
+                            <h3 class="about-details-header">experience</h3>
+                            <i class="about-details-icon fa fa-suitcase bigicon"></i>
+                            <p>I've worked for a while as a <b>social media specialist</b> and <b>copywriter</b> in advertising agency where I realized that I'm less write more code kind of girl. Currently I'm working as a <b>freelance web developer</b> and <b>digital consultant</b>. I am also experienced in events organization, cheese production, picking Swedish berries and manufacturing perfumes - but I guess it isn't relevant here ;)</p>
+                        </div>
+                    </div>
                 </div>
                 
                 <div class="about-details blue" id="about2-details">
