bye bye astronaut! hello bike! :)

--- a/index.html
+++ b/index.html
@@ -155,12 +155,13 @@
             <div class="flex-container">
 
                 <div class="bigbox noshadow upper">
-                    <div class="smallbox boxastronaut noshadow dgrey">
-                        <div class="content-centered">
-                            <div class="astronaut">
-                            </div>
+                    <div class="box noshadow bike">
+                        <div class="wheel wheel1">
+                        </div>
+                        <div class="wheel wheel2">
                         </div>
                     </div>
+    
                     <div class="box noshadow myphoto">
                     </div>
                     <div class="box boxabout red" id="about1">
