--- a/index.html
+++ b/index.html
@@ -155,11 +155,14 @@
             <div class="flex-container">
 
                 <div class="bigbox noshadow upper">
-                    <div class="box noshadow bike">
-                        <div class="wheel wheel1">
-                        </div>
-                        <div class="wheel wheel2">
-                        </div>
+                    <div class="box striped-cover bikebox">
+                        
+                    </div>
+                    <div class="box bikebox noshadow bike">
+                            <div class="wheel wheel1">
+                            </div>
+                            <div class="wheel wheel2">
+                            </div>
                     </div>
     
                     <div class="box noshadow myphoto">
@@ -619,7 +622,7 @@
                     <p>&copy; Copyright 2017</p>
                 </div>
                 <div class="disclaimer">
-                    <p>Code, design and graphic elements of this website are written/made by me. <u>Exeptions:</u> Astronaut, glasses, hand and phone graphics are based on modified vectors originally designed by Freepik. <u>Plugins:</u> easing.js, page-scroll.js </p>
+                    <p>Code, design and graphic elements of this website are written/made by me. <u>Exeptions:</u> Bike, glasses, hand and phone graphics are based on modified vectors originally designed by Freepik. <u>Plugins:</u> easing.js, page-scroll.js </p>
                 </div>
 
 
