fixing intro hovers

--- a/index.html
+++ b/index.html
@@ -107,17 +107,14 @@
                     </div>
 
                 </div>
-                <div class="box noshadow boxheart">
+                <div class="box boxheart">
                     <a class="page-scroll" href="#about">
-                        <div class="box arrow striped-cover">
-                            <!--<div class="content-centered">
-                                <i class="fa fa-arrow-down boxicon"></i>
-                            </div>-->
+                        <div class="noshadow box arrow striped-cover">
                             <div class="box hand">
                             </div>
                         </div>
                     </a>
-                    <div class="box tolove">
+                    <div class="noshadow box tolove">
                         <div class="content-centered">
                             <h2>to love</h2>
                         </div>
