--- a/index.html
+++ b/index.html
@@ -565,14 +565,16 @@
         <div class="section-header">
             <h2>contact me</h2>
         </div>
-
+   
         <div class="container">
             <div class="section-intro">
                 <p>Even a thousand words can't substitute good oldschool human-human interaction. If you feel that I might be a person you are looking for - contact me. Let's talk and share ideas :)</p>
             </div>
             <div class="flex-container contact-details">
-                <div class="bigbox striped lower">
-                    <div class="box boxphone">
+                <div class="bigbox noshadow striped lower">
+                    <div class="box striped-cover phonebg">
+                    </div>
+                    <div class="box noshadow boxphone">
                         <div class="content-centered">
                             <div class="boxdial">
                             </div>
@@ -603,9 +605,9 @@
                     <!--end of boxes on small screens-->
                     
                 </div>
-                <div class="bigbox striped email-large">
+                <div class="bigbox noshadow striped email-large">
                       <div class="content-centered ">
-                        <div class="box mustard">
+                        <div class="box mustard email">
                               <div class="content-centered">
                                 <h3>e-mail</h3>
                                 <p>marlenape@gmail.com</p>
