--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                     <p>&copy; Copyright 2017</p>
                 </div>
                 <div class="disclaimer">
-                    <p>Code, design and graphic elements of this website are written/made by me. <u>Exeptions:</u> Bike, glasses, hand and phone graphics are based on modified vectors originally designed by Freepik. <u>Plugins:</u> easing.js, page-scroll.js</p>
+                    <p>Code, design and graphic elements of this website are written/made by me. <u>Exeptions:</u> Images are based on modified vectors originally designed by Freepik. <u>Plugins:</u> easing.js <u>Modified plugins: </u>page-scroll.js, cookielawbanner.js</p>
                 </div>
 
 
