to much passion!
;p

--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
                 <div class="bigbox noshadow lower">
                     <div class="box striped noshadow">
                     </div>
-                      <a href="#passions-details" id="about3">
+                      <a href="#afterhours-details" id="about3">
                         <div class="box boxabout grey" >
                             <div class="content-centered">
-                                <h3>my<br>passions</h3>
+                                <h3>after<br>hours</h3>
                             </div>
                         </div>
                     </a>
@@ -238,7 +238,7 @@
                 </div>
                 
                 
-                <div class="about-details" id="about3-details" id="passions-details">
+                <div class="about-details" id="about3-details" id="afterhours-details">
                     <div class="content-centered">
                         <div class="about-details-box grey">
                             <a class="about-details-close page-scroll" id="about3-close" href="#about-me">
@@ -246,9 +246,9 @@
                             </a>
 
 
-                            <h3 class="about-details-header">what do i like</h3>
+                            <h3 class="about-details-header">what do i like to do after hours?</h3>
                             <img src="img/mug.png" alt="mug icon"/>
-                            <p>hitchhiking without clear destination, looking for new experiences, enjoying new places, meeting people, watching weird movies, playing word games, engaging in urban exploration, creating beautiful things, playing guitar, riding a bike(...) </p>
+                            <p>looking for new experiences, enjoying new places, meeting people, watching weird movies, playing word games, engaging in urban exploration, hitchhiking without clear destination, creating beautiful things, playing guitar, riding a bike(...) </p>
                         </div>
                     </div>
                 </div>
