w3 validator fixes part2

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                     </div>
                     <div class="box noshadow striped">
                     </div>
-                    <button type="button" class="box noshadow skill-close-box" id="">
+                    <button type="button" class="box noshadow skill-close-box">
                         <div class="content-centered">
 
                                 <i class="fa fa-times bigicon"></i>
@@ -415,7 +415,7 @@
                     </div>
                     <div class="box noshadow striped">
                     </div>
-                    <button type="button" class="box noshadow skill-close-box" id="">
+                    <button type="button" class="box noshadow skill-close-box">
                         <div class="content-centered">
 
                                 <i class="fa fa-times bigicon"></i>
@@ -478,7 +478,7 @@
                     </div>
                     <div class="box noshadow striped">
                     </div>
-                    <button type="button" class="box noshadow skill-close-box" id="">
+                    <button type="button" class="box noshadow skill-close-box">
                         <div class="content-centered">
 
                                 <i class="fa fa-times bigicon"></i>
@@ -541,7 +541,7 @@
                     </div>
                     <div class="box noshadow striped">
                     </div>
-                    <button type="button" class="box noshadow skill-close-box" id="">
+                    <button type="button" class="box noshadow skill-close-box">
                         <div class="content-centered">
 
                                 <i class="fa fa-times bigicon"></i>
