--- a/index.html
+++ b/index.html
@@ -355,10 +355,10 @@
                     <div class="box noshadow striped">
                     </div>
                     <button type="button" class="box noshadow skill-close-box">
-                        <div class="content-centered">
+                        <span class="content-centered">
 
                                 <i class="fa fa-times bigicon"></i>
-                        </div>
+                        </span>
                     </button>
 
                 </div>
@@ -388,10 +388,10 @@
                     </div>
 
                     <div class="box skill-click-box striped">
-                        <div class="content-centered">
+                        <span class="content-centered">
 
                                 <i class="fa fa-plus bigicon"></i>
-                        </div>
+                        </span>
                     </div>
                 </div>
 
@@ -416,10 +416,10 @@
                     <div class="box noshadow striped">
                     </div>
                     <button type="button" class="box noshadow skill-close-box">
-                        <div class="content-centered">
+                        <span class="content-centered">
 
                                 <i class="fa fa-times bigicon"></i>
-                        </div>
+                        </span>
                     </button>
 
                 </div>
@@ -479,10 +479,10 @@
                     <div class="box noshadow striped">
                     </div>
                     <button type="button" class="box noshadow skill-close-box">
-                        <div class="content-centered">
+                        <span class="content-centered">
 
                                 <i class="fa fa-times bigicon"></i>
-                        </div>
+                        </span>
                     </button>
 
                 </div>
@@ -542,10 +542,10 @@
                     <div class="box noshadow striped">
                     </div>
                     <button type="button" class="box noshadow skill-close-box">
-                        <div class="content-centered">
+                        <span class="content-centered">
 
                                 <i class="fa fa-times bigicon"></i>
-                        </div>
+                        </span>
                     </button>
 
                 </div>
