skill list update

--- a/index.html
+++ b/index.html
@@ -526,16 +526,18 @@
                     <button type="button" class="skill-click-area" id="skill4-close">
                     </button>
                     <div class="box skill-list blue">
-                         <div class="content-centered">
-                                     <ul>
-                                        <li>MS Office</li>
-                                        <li>Google Dev Tools</li>
-                                        <li>Prezi, Canva etc.</li>
-                                        <br>
-                                        <li>english (advanced)</li>
-                                        <li>german (long time ago)</li>
-                                    </ul>
-                                </div>
+                        <div class="content-centered">
+                            <ul>
+                                <li>MS Office</li>
+                                <li>Dev Tools</li>
+                                <li>Content Tools</li>
+                                <li>and more...</li>
+                            </ul>
+                            <ul>
+                                <li>english (advanced)</li>
+                                <li>german (long time ago)</li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="smallbox noshadow mustard">
                     </div>
