--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="about2-details" id="about2">
+                    <a href="#about2-details" id="about2">
                         <div class="box boxabout blue" >
                             <div class="content-centered">
                                 <h3>my<br>education</h3>
