--- a/index.html
+++ b/index.html
@@ -644,7 +644,14 @@
                 <div class="author">
                     <p>made with &#9825; by: Marlena Pawlukowska</p>
                     <p>&copy; Copyright 2017</p>
-          
+                    <p>
+                        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                            <img style="border:0;width:88px;height:31px"
+                                 src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                                 alt="Poprawny CSS!" />
+                        </a>
+                    </p>
+
                 </div>
                 <div class="disclaimer">
                     <p>Code, design and graphic elements of this website are written/made by me. <u>Exeptions:</u> Images are based on modified vectors originally designed by Freepik. <u>Plugins:</u> easing.js <u>Modified plugins: </u>page-scroll.js, cookielawbanner.js</p>
