--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                     <p>made with &#9825; by: Marlena Pawlukowska</p>
                     <p>&copy; Copyright 2017</p>
                     <p>
-                        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                        <a href="https://jigsaw.w3.org/css-validator/">
                             <img style="border:0;width:88px;height:31px"
                                  src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
                                  alt="Poprawny CSS!" />
