--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </a>
                 </div>
                 <div class="menu">
-                    <a class="menu-hamburger" id="menu-open">
+                    <a href="#" class="menu-hamburger" id="menu-open">
                         menu
                         <i class="fa fa-bars"></i>
 
@@ -63,7 +63,7 @@
                      <li><a href="#about" class="page-scroll blue" id="about-open">about me</a></li>
                     <li><a href="#skills" class="page-scroll red" id="skills-open">my skills</a></li>
                      <li><a href="#contact" class="page-scroll violet" id="contact-open">contact</a></li>
-                    <li><a class="mustard" id="menu-close"><i class="fa fa-times bigicon"></i></a></li>
+                    <li><a href="#" class="mustard" id="menu-close"><i class="fa fa-times bigicon"></i></a></li>
                 </ul>
             </div>
 
