--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
 
             <footer>
                 <div class="section-header">
-                    <h2>thanks for the visit<!-- :&rpar;--></h2>
+                    <h2>thanks for the visit</h2>
                 </div>
 
 
