--- a/index.html
+++ b/index.html
@@ -241,7 +241,6 @@
                     </div>
                 </div>
             </div>
-
         </section>
 
 
@@ -532,109 +531,101 @@
                     </div>
 
                 </div>
+             </div>
+       </section>
 
-                </section>
+       <footer>
+           <div class="section-header">
+               <h2>thanks for the visit</h2>
+           </div>
 
+           <div class="container">
+               <div class="flex-container">
 
-            <footer>
-                <div class="section-header">
-                    <h2>thanks for the visit</h2>
-                </div>
+                   <div class="author">
+                       <p>made with &#9825; by: Marlena Pawlukowska</p>
+                       <p>&copy; Copyright 2017</p>
+                       <p>
+                           <a href="https://jigsaw.w3.org/css-validator/">
+                               <img style="border:0;width:88px;height:31px"
+                                    src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                                    alt="Poprawny CSS!" />
+                           </a>
+                       </p>
 
+                   </div>
+                   <div class="disclaimer">
+                       <p>Code, design and graphic elements of this website are written/made by me. <u>Exeptions:</u> Images are based on modified vectors originally designed by Freepik. <u>Plugins:</u> easing.js <u>Modified plugins: </u>page-scroll.js, cookielawbanner.js</p>
 
-                <div class="container">
-                    <div class="flex-container">
+                   </div>
+               </div>
+           </div>
+       </footer>
 
-                        <div class="author">
-                            <p>made with &#9825; by: Marlena Pawlukowska</p>
-                            <p>&copy; Copyright 2017</p>
-                            <p>
-                                <a href="https://jigsaw.w3.org/css-validator/">
-                                    <img style="border:0;width:88px;height:31px"
-                                         src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-                                         alt="Poprawny CSS!" />
-                                </a>
-                            </p>
+       <div class="cookie-banner">
+           <div class="cookie-banner-inner">
+               <p>This site uses <span>cookies</span> for statistic purposes. I hope you like cookies, because by continuing to browse the site, you are agreeing to it's use of cookies.</p>
+               <i class="fa fa-times bigicon" id="cookie-banner-close"></i>
 
-                        </div>
-                        <div class="disclaimer">
-                            <p>Code, design and graphic elements of this website are written/made by me. <u>Exeptions:</u> Images are based on modified vectors originally designed by Freepik. <u>Plugins:</u> easing.js <u>Modified plugins: </u>page-scroll.js, cookielawbanner.js</p>
-
-                        </div>
-
-
-
-
-                    </div>
-
-
-                </div>
-
-            </footer>
-
-            <div class="cookie-banner">
-                <div class="cookie-banner-inner">
-                    <p>This site uses <span>cookies</span> for statistic purposes. I hope you like cookies, because by continuing to browse the site, you are agreeing to it's use of cookies.</p>
-                    <i class="fa fa-times bigicon" id="cookie-banner-close"></i>
-
-                </div>
-            </div>
+           </div>
+       </div>
 
 
+       <!-- jQuery -->
+       <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+
+       <!-- Easing plugin -->
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
+
+       <!-- Page scroll from Agency Start Bootstrap Template -->
+       <script src="js/plugins/page-scroll.js"></script>
+
+       <!--  Creare's 'Implied Consent' EU Cookie Law Banner v:2.4  -->
+       <script src="js/plugins/cookielawbanner.js"></script>
+
+       <!-- My JS -->
+       <script src="js/marljs.js"></script>
+
+       <!-- Start of StatCounter Code for Default Guide -->
+       <script type="text/javascript">
+           var sc_project = 11346861;
+           var sc_invisible = 1;
+           var sc_click_stat = 2;
+           var sc_security = "2b0c679b";
+           var scJsHost = (("https:" == document.location.protocol) ?
+                           "https://secure." : "http://www.");
+           document.write("<sc" + "ript type='text/javascript' src='" +
+                          scJsHost +
+                          "statcounter.com/counter/counter.js'></" + "script>");
+       </script>
+
+       <noscript>
+          <div class="statcounter">
+             <a title="free hit counter" href="http://statcounter.com/" target="_blank">
+                <img class="statcounter" src="//c.statcounter.com/11346861/0/2b0c679b/1/" alt="free hit counter">
+             </a>
+          </div>
+       </noscript>
+       <!-- End of StatCounter Code for Default Guide -->
 
 
-            <!-- jQuery -->
-            <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+       <!--Google Analytics-->
+       <script>
+           (function(i, s, o, g, r, a, m) {
+               i['GoogleAnalyticsObject'] = r;
+               i[r] = i[r] || function() {
+                   (i[r].q = i[r].q || []).push(arguments)
+               }, i[r].l = 1 * new Date();
+               a = s.createElement(o),
+                   m = s.getElementsByTagName(o)[0];
+               a.async = 1;
+               a.src = g;
+               m.parentNode.insertBefore(a, m)
+           })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-            <!-- Easing plugin -->
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
+           ga('create', 'UA-57228186-4', 'auto');
+           ga('send', 'pageview');
+       </script>
 
-            <!-- Page scroll from Agency Start Bootstrap Template -->
-            <script src="js/plugins/page-scroll.js"></script>
-
-            <!--  Creare's 'Implied Consent' EU Cookie Law Banner v:2.4  -->
-            <script src="js/plugins/cookielawbanner.js"></script>
-
-            <!-- My JS -->
-            <script src="js/marljs.js"></script>
-
-            <!-- Start of StatCounter Code for Default Guide -->
-            <script type="text/javascript">
-                var sc_project = 11346861;
-                var sc_invisible = 1;
-                var sc_click_stat = 2;
-                var sc_security = "2b0c679b";
-                var scJsHost = (("https:" == document.location.protocol) ?
-                                "https://secure." : "http://www.");
-                document.write("<sc" + "ript type='text/javascript' src='" +
-                               scJsHost +
-                               "statcounter.com/counter/counter.js'></" + "script>");
-            </script>
-
-            <noscript><div class="statcounter"><a title="free hit
-                counter" href="http://statcounter.com/" target="_blank"><img
-                                                                             class="statcounter"
-                                                                             src="//c.statcounter.com/11346861/0/2b0c679b/1/" alt="free
-                hit counter"></a></div></noscript>
-            <!-- End of StatCounter Code for Default Guide -->
-
-            <script>
-                (function(i, s, o, g, r, a, m) {
-                    i['GoogleAnalyticsObject'] = r;
-                    i[r] = i[r] || function() {
-                        (i[r].q = i[r].q || []).push(arguments)
-                    }, i[r].l = 1 * new Date();
-                    a = s.createElement(o),
-                        m = s.getElementsByTagName(o)[0];
-                    a.async = 1;
-                    a.src = g;
-                    m.parentNode.insertBefore(a, m)
-                })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-                ga('create', 'UA-57228186-4', 'auto');
-                ga('send', 'pageview');
-            </script>
-
-            </body>
-
-        </html>
+    </body>
+</html>
