cleaning about section JS mess

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <div class="flex-container intro-container">
                 <div class="intro" id="home">
-                    <div class="leftside downer">
+                    <div class="leftside">
 
                         <div class="hellobox">
                             <h1>hello!</h1>
@@ -78,7 +78,7 @@
 
                     </div>
 
-                    <div class="rightside liftmeup">
+                    <div class="rightside">
 
                         <div class="box boxjob">
                             <h2>&lt;job&gt;</h2>
@@ -136,12 +136,12 @@
                         <div class="box myphoto">
                         </div>
                         <div>
-                            <a href="#about1-details" id="about1">
+                            <a class="about-box" href="#experience-details" id="experience">
                                 <div class="box boxabout">
                                     <h3>my<br>experience</h3>
                                 </div>
                             </a>
-                            <div class="about-details" id="about1-details">
+                            <div class="about-details" id="experience-details">
                                 <div class="about-details-wrapper">
                                     <div class="about-details-box">
                                         <a class="about-details-close page-scroll" id="about1-close" href="#about-me">
@@ -157,13 +157,13 @@
                         </div>
 
                         <div>
-                            <a href="#about2-details" id="about2">
+                            <a class="about-box" href="#education-details" id="education">
                                 <div class="box boxabout">
                                     <h3>my<br>education</h3>
                                 </div>
                             </a>
 
-                            <div class="about-details" id="about2-details">
+                            <div class="about-details" id="education-details">
                                 <div class="about-details-wrapper">
                                     <div class="about-details-box">
                                         <a class="about-details-close page-scroll" id="about2-close" href="#about-me">
@@ -189,12 +189,12 @@
                         <div class="back-box">
                         </div>
                         <div>
-                            <a href="#about3-details" id="about3">
+                            <a class="about-box" href="#after-hours-details" id="after-hours">
                                 <div class="box boxabout">
                                     <h3>after<br>hours</h3>
                                 </div>
                             </a>
-                            <div class="about-details" id="about3-details">
+                            <div class="about-details" id="after-hours-details">
                                 <div class="about-details-wrapper">
                                     <div class="about-details-box">
                                         <a class="about-details-close page-scroll" id="about3-close" href="#about-me">
@@ -213,12 +213,12 @@
                         </div>
 
                         <div>
-                            <a href="#about4-details" id="about4">
+                            <a class="about-box" href="#looking-for-details" id="looking-for">
                                 <div class="box boxabout">
                                     <h3>what am I<br>looking for?</h3>
                                 </div>
                             </a>
-                            <div class="about-details" id="about4-details">
+                            <div class="about-details" id="looking-for-details">
                                 <div class="about-details-wrapper">
                                     <div class="about-details-box">
                                         <a class="about-details-close page-scroll" id="about4-close" href="#about-me">
