cleaning skills section JS mess

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
                 <div class="flex-container">
 
-                    <div class="bigbox" id="skill1">
+                    <div class="bigbox skill" id="skill1">
                         <div class="skill-bg">
                         </div>
                         <button type="button" class="skill-click-area" id="skill1-button"></button>
@@ -288,7 +288,7 @@
 
 
                     <div class="bigbox skill-details" id="skill1-details">
-                        <button type="button" class="skill-click-area" id="skill1-close"></button>
+                        <button type="button" class="skill-click-area skill-close"></button>
                         <div class="box skill-list">
                             <ul>
                                 <li>html5</li>
@@ -310,7 +310,7 @@
                     </div>
 
 
-                    <div class="bigbox" id="skill2">
+                    <div class="bigbox skill" id="skill2">
                         <div class="skill-bg">
                         </div>
                         <button type="button" class="skill-click-area" id="skill2-button">
@@ -341,7 +341,7 @@
 
 
                     <div class="bigbox skill-details" id="skill2-details">
-                        <button type="button" class="skill-click-area" id="skill2-close">
+                        <button type="button" class="skill-click-area skill-close">
                         </button>
                         <div class="box skill-list">
                             <ul>
@@ -365,7 +365,7 @@
 
 
 
-                    <div class="bigbox" id="skill3">
+                    <div class="bigbox skill" id="skill3">
                         <div class="skill-bg">
                         </div>
                         <button type="button" class="skill-click-area" id="skill3-button">
@@ -396,7 +396,7 @@
 
 
                     <div class="bigbox skill-details" id="skill3-details">
-                        <button type="button" class="skill-click-area" id="skill3-close">
+                        <button type="button" class="skill-click-area skill-close">
                         </button>
                         <div class="box skill-list">
                             <ul>
@@ -422,7 +422,7 @@
 
 
 
-                    <div class="bigbox" id="skill4">
+                    <div class="bigbox skill" id="skill4">
                         <div class="skill-bg">
                         </div>
                         <button type="button" class="skill-click-area" id="skill4-button">
@@ -453,7 +453,7 @@
 
 
                     <div class="bigbox skill-details" id="skill4-details">
-                        <button type="button" class="skill-click-area" id="skill4-close">
+                        <button type="button" class="skill-click-area skill-close">
                         </button>
                         <div class="box skill-list">
                             <ul>
