cleaning navigation JS mess

--- a/index.html
+++ b/index.html
@@ -38,17 +38,16 @@
                         <a href="#" class="menu-hamburger" id="menu-open">
                             menu
                             <i class="fa fa-bars"></i>
-
                         </a>
                     </div>
                 </div>
 
                 <div class="main-nav-container">
                     <ul class="main-nav" id="main-nav">
-                        <li><a href="#home" class="page-scroll" id="home-open"><span class="">home</span></a></li>
-                        <li><a href="#about" class="page-scroll" id="about-open">about me</a></li>
-                        <li><a href="#skills" class="page-scroll" id="skills-open">my skills</a></li>
-                        <li><a href="#contact" class="page-scroll" id="contact-open">contact</a></li>
+                        <li><a href="#home" class="menu-item page-scroll" id="home-open"><span class="">home</span></a></li>
+                        <li><a href="#about" class="menu-item page-scroll" id="about-open">about me</a></li>
+                        <li><a href="#skills" class="menu-item page-scroll" id="skills-open">my skills</a></li>
+                        <li><a href="#contact" class="menu-item page-scroll" id="contact-open">contact</a></li>
                         <li><a href="#" id="menu-close"><i class="fa fa-times bigicon"></i></a></li>
                     </ul>
                 </div>
