--- a/index.html
+++ b/index.html
@@ -296,6 +296,8 @@
                                 <li>jquery</li>
                                 <li>bootstrap 3</li>
                                 <li>wordpress cms</li>
+								<li>rwd</li>
+								<li>email coding</li>
                             </ul>
                         </div>
                         <div class="smallbox">
