--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
         <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
         <!--main fonts-->
         <link href="https://fonts.googleapis.com/css?family=Lora:400i|Montserrat:800,900|Source+Code+Pro" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Cousine" rel="stylesheet">
         <!--logo placeholder font-->
-        <link href="https://fonts.googleapis.com/css?family=Fascinate" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
+
 
         <!-- My CSS -->
         <link href="css/styles.css" rel="stylesheet">
@@ -31,7 +34,7 @@
                 <div class="flex-container" id="mini-nav">
                     <div class="logo">
                         <a href="">
-                            .marl
+                            [marl]
                         </a>
                     </div>
                     <div class="menu">
@@ -115,8 +118,10 @@
 
             <div class="container">
                 <div class="section-intro">
-                    <p>Hi, I'm Marlena. I love people and computers, beautiful things and eloquent solutions. Still learning to become BFF with technology. I'm in pursuit of a job that could make web an even better place. I wouldn’t call myself a ninja - I love to make visible impact.
-                        <br>If you are viewing this site it's probably because your job offer caught my eye or I fall in love with your company and I'm wondering if that feeling could become mutual. Here you will find more about me and things I know and do. Who knows, maybe we can make something impressive together :)</p>
+                  <p>In love with <span class="highlight-it">technology</span>, <span class="highlight-it">innovation</span> and <span class="highlight-it">smart solutions</span>. Experienced in realization and coordination of <span class="violet-text">digital&nbsp;marketing</span>, <span class="mustard-text">web&nbsp;development</span> and <span class="red-text">design</span> projects. <span class="highlight-it">Agile thinker</span> - putting a strong emphasis on flexibility, trust, team ownership, curiosity and collaboration across disciplines.</p>
+                  <p>I believe that <span class="highlight-it">ethical leadership</span> and <span class="highlight-it">mindful communication</span> can lead to projects that are making both the client and the team happy. And I believe that  such projects have a grater chance in <span class="blue-text">making web an even better place.</span></p>
+
+
                 </div>
 
                 <div class="flex-container" id="about-me">
@@ -150,7 +155,8 @@
                                         </a>
                                         <h3>experience</h3>
                                         <img src="img/mustache.png" alt="mustache icon" />
-                                        <p>I've worked for a while as a <strong>social media specialist</strong> and <strong>copywriter</strong> in advertising agency where I realized that I'm less write more code kind of girl. Currently I'm working as a <strong>freelance web developer</strong>                            and <strong>digital consultant</strong>. I am also experienced in events organization, cheese production, picking Swedish berries and manufacturing perfumes - but I guess it isn't relevant here ;)</p>
+                                        <p>Currently I am <strong>managing a multinational team</strong> of geeks and I am responsible for <strong>smooth delivery</strong> of <strong>digital/web projects</strong>. To put it shortly: keeping everyone happy.</p>
+                                        <p>I've gained my experience playing with code (and sometimes fire)- as <strong>web developer</strong> and <strong>digital messaging specialist</strong>.</P>
                                     </div>
                                 </div>
                             </div>
@@ -174,8 +180,7 @@
                                         <h3>education</h3>
                                         <img src="img/bowtie.png" alt="bowtie icon" />
                                         <p>I graduated from <strong>film and media studies</strong>. In my master thesis I wrote about the impact new media and technologies have on today's society and politics. One of my professors kept repeating that to understand today's
-                                            culture you should know at least one foreign and one programming language. I took it very seriously :) I believe in <strong>lifelong learning</strong> and I am addicted to online courses even more than to TV series. Currently
-                                            learning <strong>javascript</strong> magic, <strong>css</strong> tricks and <strong>Spanish</strong>.</p>
+                                            culture you should know at least one foreign and one programming language. I took it very seriously&nbsp;:). I believe in <strong>lifelong learning</strong>. I am addicted to online courses, tutorials and podcasts even more than to TV series. </p>
                                     </div>
                                 </div>
                             </div>
@@ -205,8 +210,7 @@
 
                                         <h3>what do i like to do after hours?</h3>
                                         <img src="img/mug.png" alt="mug icon" />
-                                        <p>looking for new experiences, enjoying new places, meeting people, watching weird movies, playing word games, engaging in urban exploration, hitchhiking without clear destination, creating beautiful things, playing guitar, riding
-                                            a bike(...)</p>
+                                        <p>looking for new experiences, enjoying new places, meeting people, watching weird movies, meditating, playing word games, engaging in urban exploration, hitchhiking without clear destination, creating beautiful things, creating ugly things on purpose,  playing guitar/piano, riding a bike, cooking, eating(...)</p>
                                     </div>
                                 </div>
                             </div>
@@ -547,7 +551,7 @@
 
                    <div class="author">
                        <p>made with &#9825; by: Marlena Pawlukowska</p>
-                       <p>&copy; Copyright 2017</p>
+                       <p>&copy; Copyright 2016</p>
                        <p>
                            <a href="https://jigsaw.w3.org/css-validator/">
                                <img style="border:0;width:88px;height:31px"
